Bugfix - u32 overflow on localhost

--- a/webserver/html/static/tabs.css
+++ b/webserver/html/static/tabs.css
@@ -26,6 +26,7 @@ body {
   line-height: 1.5;
   font-size: 0.9em;
   display: none;
+  overflow: auto;
 }
 
 .tabs__radio:checked + .tabs__label {
